# calculator-lab1

./: README.md  pyproject.toml  requirements.txt
src/: constants.py  converter.py  main.py  operations.py  rpn_calculate.py  tokenizer.py  validators.py
tests/: calculate_test.py  converter_test.py  full_test.py  tokenizer_test.py
