[project]
name = "labs"
version = "0.1.0"
description = "Калькулятор, принимающий выражение в обычном формате, под капотом преобразующий его в RPN по алгоритму Дейкстры и считающий конвертированное выражение"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]
[tool.mypy]
[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
